--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/ozsujd/l513g" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/ozsujd/x11s" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/ozsujd/j12y" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/ozsujd/j8k" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/ozsujd/u4k" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/ozsujd/b12t" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/ozsujd/w3u" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/ozsujd/y10e" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/ozsujd/k9y" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/ozsujd/k7n" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/ozsujd/k5f" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/dxsdojr/q513k" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/dxsdojr/d11k" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/dxsdojr/u12m" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/dxsdojr/k8d" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/dxsdojr/x4o" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/dxsdojr/u12x" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/dxsdojr/p3g" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/dxsdojr/t10j" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/dxsdojr/f9x" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/dxsdojr/v7w" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/dxsdojr/j5o" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12242506.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/07/XIEYANYI-600x400-320x200.jpg"><p align="center">谢燕益谈中共惧怕709律师的真实原因</p></a>
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12242506.md#1" title="谢燕益谈中共惧怕709律师的真实原因""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/XIEYANYI-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12242632.md#1" title="驻港国安公署揭牌之际 港确诊个案激增""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/20200708_085704-320x200.jpg">&nbsp;</a>
@@ -13,8 +13,8 @@
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12241087.md#1" title="黑龙江法轮功学员王淑坤遭毒打 含冤离世""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/unnamed-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12241006.md#1" title="岳阳降雨突破68年以来极值 五省或发山洪""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/3-8-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://vkwknd3513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12242228.md#1">邓紫棋拿麦克风飙高音 罩中的玻璃杯瞬间炸裂</a><br>
-:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/9/n12242776.md#1">【最新疫情7.9】香港出现第三波感染</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12242228.md#1">邓紫棋拿麦克风飙高音 罩中的玻璃杯瞬间炸裂</a><br>
+:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/9/n12242776.md#1">【最新疫情7.9】香港出现第三波感染</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/9/n12242860.md#1">加州一周内3次单日平均染疫死亡人数破百</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/9/n12242838.md#1">美联航：受疫情影响  今秋3.6万员工或被裁员</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/4/13/n12028379.md#1">【思想领袖】布拉特：中共改秩序 扬言打台湾</a><br>
@@ -26,9 +26,9 @@
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/7/n12239406.md#1">美官员欲访台 中共会做什么？FBI揭秘</a><br>
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12240429.md#1">【翻墙必看】中共在美国“猎狐”真相曝光</a><br>
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/6/n12237466.md#1">美肯塔基海关查获46磅来自中国的迷奸药</a><br>
+<a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12240201.md#1">湖北水库滑动变形 近2.9万民众急撤</a><br>
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/7/n12239209.md#1">中共在克什米尔建水坝 引发大规模抗议</a><br>
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/7/n12239307.md#1">新浪或将退市 又一互联网中概股欲离场</a><br>
-<a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12240201.md#1">湖北水库滑动变形 近2.9万民众急撤</a><br>
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12240462.md#1">四省洪水告急 江西已有近40万人受灾</a><br>
 <br><p align="center"><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/7/n12239799.md#1">FBI：每10小时启动一起中共相关反间谍案</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 359,530,157 人
+!共 359,530,498 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
